Hotfix/Fix buttons on smaller display resolutions

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -10,11 +10,6 @@
     height: 100%;
 }
 
-.btn {
-    height: 100%;
-    width: 200px;
-}
-
 .logo {
     height: 70px;
     width: 200px;
@@ -80,30 +75,6 @@ main {
     margin: 0 5px 0px 5px;
 }
 
-@media screen and (max-width: 768px) {
-    .card-container {
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .card {
-        width: 50%;
-        margin-top: 10px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    .menu {
-        display: flex;
-        flex-direction: column;
-        justify-content: end;
-        width: 100px;
-    }
-}
-
 .btn {
 	background: linear-gradient(to bottom, #007dc1 5%, #0061a7 100%);
 	background-color: #007dc1;
@@ -116,6 +87,7 @@ main {
     text-align: center;
 	line-height: 70px;
 	height: 70px; 
+    width: 100px;
 }
 .btn:hover {
 	background:linear-gradient(to bottom, #0061a7 5%, #007dc1 100%);
@@ -138,7 +110,34 @@ main {
     text-align: center;
 	line-height: 70px;
 	height: 70px;
-    width: 200px;
+    width: 100px;
+}
+
+@media screen and (max-width: 768px) {
+    .card-container {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .card {
+        width: 50%;
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .head-menu {
+        height: auto;
+    }
+
+    .menu {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-left: auto;
+        width: 100px;
+    }
 }
 
 /* temp */
@@ -197,4 +196,14 @@ main {
 #load-time {
     text-align: center;
     font-size: 20px;
+}
+
+#create-task {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+#create-task * {
+    margin-bottom: 10px;
 }
